--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: hk5.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
-  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-577.2KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.27MB/s(Youtube:不良林), server: hk3.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
   - {name: 🇫🇷 法国-626.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-3.54MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 捷克-1.02MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-577.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
       - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
