--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-626.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-260.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: hk5.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
-  - {name: 🇳🇱 荷兰-213.1KB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
   - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-257.1KB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 31097, type: trojan, password: 644c9b90-3bf9-4d95-a837-ce83c31ed839, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-687.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-260.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-234.3KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-646.1KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇫🇷 法国-365.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 捷克-310.5KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-201.1KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 捷克-310.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 捷克-310.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 捷克-310.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 捷克-310.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 捷克-310.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 捷克-310.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-626.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-257.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-687.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-234.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-646.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-365.4KB/s(Youtube:不良林)
+      - 捷克-310.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-201.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
